// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CVUInput is neither optional nor required when specified 1`] = `
<Input
  autoCorrect={false}
  label="account #"
  placeholder="1112222222344444444445"
/>
`;

exports[`CVUInput is optional when specified 1`] = `
<Input
  autoCorrect={false}
  label="account #"
  placeholder="1112222222344444444445"
  required={false}
/>
`;

exports[`CVUInput renders correctly 1`] = `
<Input
  autoCorrect={false}
  label="account #"
  placeholder="1112222222344444444445"
/>
`;
